@@ -6,6 +6,7 @@ pyroscope (0.3.4) hardy; urgency=low
   * rtcontrol: added machinery to allow custom field definitions
   * rtcontrol: --help-fields added
   * rtcontrol: interactive mode added (-i, --yes)
+  * Added support for XMLRPC TCP connections (scgi_port)
 
  -- pyroscope <pyroscope.project@gmail.com>  Sat, 20 Mar 2010 03:30:48 +0100
 
